src/test/deca/syntax/invalid/obtained_res/DeclVarDansWhilesynt.res
./src/test/deca/syntax/invalid/created/testGeneraux/DeclVarDansWhile.deca:10:12: no viable alternative at input 'x'
